--- a/BlazorApp3/Client/Pages/ResetPassword.razor
+++ b/BlazorApp3/Client/Pages/ResetPassword.razor
@@ -1,5 +1,4 @@
-﻿
-@page "/ResetPassword"
+﻿@page "/ResetPassword"
 
 <head>
 	<meta charset="UTF-8">
@@ -27,8 +26,10 @@
 
 								<div class="input-box">
 									<div class="input-group">
-										<span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
-										<input placeholder="email address" class="form-control" @bind="@resetPasswordModel.Email" type="email">
+										<span class="input-group-addon"><i
+												class="glyphicon glyphicon-envelope color-blue"></i></span>
+										<input placeholder="email address" class="form-control"
+											@bind="@resetPasswordModel.Email" type="email">
 									</div>
 								</div>
 								<div class="input-boxes">
@@ -47,12 +48,13 @@
 </div>
 
 
-@code{
-private readonly ResetPasswordModel resetPasswordModel = new ResetPasswordModel();
-        private string content;
-        private async Task HandleValidSubmit()
-        {
-            HttpResponseMessage response = await _httpClient.PostAsJsonAsync<ResetPasswordModel>("user/resetPassword", resetPasswordModel);
-            content = await response.Content.ReadAsStringAsync();
-        }
+@code {
+	private readonly ResetPasswordModel resetPasswordModel = new ResetPasswordModel();
+	private string content;
+	private async Task HandleValidSubmit()
+	{
+		HttpResponseMessage response = await _httpClient.PostAsJsonAsync<ResetPasswordModel>("user/resetPassword",
+		resetPasswordModel);
+		content = await response.Content.ReadAsStringAsync();
+	}
 }
