--- a/BlazorApp3/Client/Pages/DeleteMovieStudio.razor.css
+++ b/BlazorApp3/Client/Pages/DeleteMovieStudio.razor.css
@@ -1,24 +1,24 @@
 ﻿body {
-    margin-top: 20px;
-    background-color: #fff;
+  margin-top: 20px;
+  background-color: #fff;
 }
 
 .card {
-    margin-bottom: 1.5rem;
-    box-shadow: 0 1px 15px 1px rgba(52, 40, 104, .08);
+  margin-bottom: 1.5rem;
+  box-shadow: 0 1px 15px 1px rgba(52, 40, 104, 0.08);
 }
 
 .card {
-    position: relative;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background-color: #fff;
-    background-clip: border-box;
-    border: 1px solid #e5e9f2;
-    border-radius: .2rem;
-    width: 100%;
+  position: relative;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid #e5e9f2;
+  border-radius: 0.2rem;
+  width: 100%;
 }
