--- a/BlazorApp3/MauiApp2/MainPage.xaml
+++ b/BlazorApp3/MauiApp2/MainPage.xaml
@@ -1,9 +1,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:b="clr-namespace:Microsoft.AspNetCore.Components.WebView.Maui;assembly=Microsoft.AspNetCore.Components.WebView.Maui"
-             xmlns:local="clr-namespace:MauiApp2"
-             x:Class="MauiApp2.MainPage"
-             BackgroundColor="{DynamicResource PageBackgroundColor}">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:b="clr-namespace:Microsoft.AspNetCore.Components.WebView.Maui;assembly=Microsoft.AspNetCore.Components.WebView.Maui"
+    xmlns:local="clr-namespace:MauiApp2" x:Class="MauiApp2.MainPage" BackgroundColor="{DynamicResource PageBackgroundColor}">
 
     <b:BlazorWebView HostPage="wwwroot/index.html">
         <b:BlazorWebView.RootComponents>
