--- a/BlazorApp3/MauiApp2/Pages/Contact.razor
+++ b/BlazorApp3/MauiApp2/Pages/Contact.razor
@@ -2,17 +2,18 @@
 
 @*<p role="status">Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+  <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
-<div>@acc.Email</div>
+  <div>@acc.Email</div>
 
-<div>@mess </div> *@
+  <div>@mess </div> *@
 
 <head>
-    <meta charset="UTF-8"> 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   </head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
 <body>
   <div class="container">
     <div class="content">
@@ -38,36 +39,37 @@
       </div>
       <div class="right-side">
         <div class="topic-text">Send us a message</div>
-        <p>If you have any work from me or any types of quries related to my tutorial, you can send me message from here. It's my pleasure to help you.</p>
-      <EditForm Model="@feedbackMessageModel" OnValidSubmit="SendFeedbackMessage">
-								<DataAnnotationsValidator />
-								<ValidationSummary />
-        
-        <div class="input-box">
-          <input type="text" placeholder="Enter your name" @bind=@feedbackMessageModel.Name>
-        </div>
-        <div class="input-box">
-          <input type="text" placeholder="Enter your email" @bind=@feedbackMessageModel.Email>
-        </div>
-        <div class="input-box message-box">
-          <textarea placeholder="Enter your message" @bind=@feedbackMessageModel.Message />
-        </div>
-        <div class="button">
-          <input type="submit" value="Send Now" >
-        </div>
-        <div>@content</div>
-      
-      </EditForm>
-    </div>
+        <p>If you have any work from me or any types of quries related to my tutorial, you can send me message from
+          here. It's my pleasure to help you.</p>
+        <EditForm Model="@feedbackMessageModel" OnValidSubmit="SendFeedbackMessage">
+          <DataAnnotationsValidator />
+          <ValidationSummary />
+
+          <div class="input-box">
+            <input type="text" placeholder="Enter your name" @bind=@feedbackMessageModel.Name>
+          </div>
+          <div class="input-box">
+            <input type="text" placeholder="Enter your email" @bind=@feedbackMessageModel.Email>
+          </div>
+          <div class="input-box message-box">
+            <textarea placeholder="Enter your message" @bind=@feedbackMessageModel.Message />
+          </div>
+          <div class="button">
+            <input type="submit" value="Send Now">
+          </div>
+          <div>@content</div>
+
+        </EditForm>
+      </div>
     </div>
   </div>
 
 </body>
-@code{
-    private FeedbackMessageModel feedbackMessageModel = new();
-    private string content = "";
-    protected async Task SendFeedbackMessage()
-    {
-       content= await (await _httpClient.PostAsJsonAsync("user/feedback", feedbackMessageModel)).Content.ReadAsStringAsync();
-    }
+@code {
+  private FeedbackMessageModel feedbackMessageModel = new();
+  private string content = "";
+  protected async Task SendFeedbackMessage()
+  {
+    content = await (await _httpClient.PostAsJsonAsync("user/feedback", feedbackMessageModel)).Content.ReadAsStringAsync();
+  }
 }
