--- a/BlazorApp3/MauiApp2/Pages/DepositCustomer.razor
+++ b/BlazorApp3/MauiApp2/Pages/DepositCustomer.razor
@@ -4,38 +4,38 @@
 
 @inject IJSRuntime JS
 @page "/Deposit"
-@attribute [Authorize(Roles ="Customer")]
+@attribute [Authorize(Roles = "Customer")]
 
 @*@if(content == null)
-{
+    {
     <div>Loadding</div>
-}
-else
-{
+    }
+    else
+    {
     <div>@content</div>
 
-}*@
+    }*@
 
-@if(string.IsNullOrEmpty(content))
+@if (string.IsNullOrEmpty(content))
 {
-    if(!doneCash)
+    if (!doneCash)
     {
-        <input type="number" step="0.01" min="0.01" @bind="cash"/>
+        <input type="number" step="0.01" min="0.01" @bind="cash" />
         <button @onclick="Cash">Ok</button>
-}
+    }
     else
     {
         <div>Deposit @cash</div>
     }
 
-<div id="dropin-container"></div>
+    <div id="dropin-container"></div>
     <form id="payment-form" method="post">
         <!-- Putting the empty container you plan to pass to
-        `braintree.dropin.create` inside a form will make layout and flow
-        easier to manage -->
-        <input type="submit" style="@divCSS"/>
-        <input type="hidden" id="nonce" name="nonce"/>
-        <input type="hidden" id="cash" name="cash"/>
+                        `braintree.dropin.create` inside a form will make layout and flow
+                        easier to manage -->
+    <input type="submit" style="@divCSS" />
+        <input type="hidden" id="nonce" name="nonce" />
+        <input type="hidden" id="cash" name="cash" />
     </form>
     <div id="paypal-button"></div>
 }
@@ -44,42 +44,43 @@ else
     <div>@content</div>
     <button @onclick="Recharge">Recharge</button>
 }
-    @code{
+@code {
     private string content;
-        private double cash = 0;
-        private string clientToken;
-        private string divCSS = "display: none;";
-        private void DivCSS(string divCSS)
-        {
-            this.divCSS = divCSS;
-        }
-        private DotNetObjectReference<DepositCustomer> objRef;
-        private bool doneCash = false;
-        private async Task Recharge()
-        {
+    private double cash = 0;
+    private string clientToken;
+    private string divCSS = "display: none;";
+    private void DivCSS(string divCSS)
+    {
+        this.divCSS = divCSS;
+    }
+    private DotNetObjectReference<DepositCustomer> objRef;
+    private bool doneCash = false;
+    private async Task Recharge()
+    {
         content = null;
         doneCash = false;
         cash = 0;
         DivCSS("display: none;");
     }
     private async Task Cash()
+    {
+        try
         {
-            try
-            {
-                doneCash = true;
-                clientToken = new string(await _httpClient.GetFromJsonAsync<char[]>("Customer/Deposit"));
-                objRef = DotNetObjectReference.Create(this);
-                await JS.InvokeVoidAsync("Deposit", objRef, clientToken, cash);
-                DivCSS("display: block;");
-            }
-            catch (Exception)
-            {
-            }
+            doneCash = true;
+            clientToken = new string(await _httpClient.GetFromJsonAsync<char[]>("Customer/Deposit"));
+            objRef = DotNetObjectReference.Create(this);
+            await JS.InvokeVoidAsync("Deposit", objRef, clientToken, cash);
+            DivCSS("display: block;");
         }
-        [JSInvokable]
-        public async Task Test(string test, string test2, string test3)
+        catch (Exception)
         {
-            content = await (await _httpClient.PostAsJsonAsync<List<string>>($"Customer/{test3}", new List<string>() { test, test2 })).Content.ReadAsStringAsync();
-            StateHasChanged();
         }
+    }
+    [JSInvokable]
+    public async Task Test(string test, string test2, string test3)
+    {
+        content = await (await _httpClient.PostAsJsonAsync<List<string>>($"Customer/{test3}", new List<string>() { test, test2
+})).Content.ReadAsStringAsync();
+        StateHasChanged();
+    }
 }
