--- a/BlazorApp3/MauiApp2/Pages/EditAccount.razor
+++ b/BlazorApp3/MauiApp2/Pages/EditAccount.razor
@@ -2,31 +2,31 @@
 @attribute [Authorize(Roles = "Admin")]
 
 @*<div>@content</div>
-@if (acc == null)
-{
+	@if (acc == null)
+	{
 	<p>
-		<em>Loading...</em>
+	<em>Loading...</em>
 	</p>
-}
-else
-{
+	}
+	else
+	{
 	<EditForm Model="@acc" OnValidSubmit="@HandleValidSubmit">
-		<DataAnnotationsValidator />
-		<ValidationSummary />
-		Email
-		<InputText @bind-Value="@acc.Email" />
-		Name
-		<InputText @bind-Value="@acc.Name" />
-		Role
-		<InputText @bind-Value="@acc.Role" />
-		DateOfBirth
-		<InputDate @bind-Value="@acc.DateOfBirth" />
-		Wallet
-		<InputNumber @bind-Value="@acc.Wallet" />
+	<DataAnnotationsValidator />
+	<ValidationSummary />
+	Email
+	<InputText @bind-Value="@acc.Email" />
+	Name
+	<InputText @bind-Value="@acc.Name" />
+	Role
+	<InputText @bind-Value="@acc.Role" />
+	DateOfBirth
+	<InputDate @bind-Value="@acc.DateOfBirth" />
+	Wallet
+	<InputNumber @bind-Value="@acc.Wallet" />
 
-		<button type="submit">Submit</button>
+	<button type="submit">Submit</button>
 	</EditForm>
-}*@
+	}*@
 
 
 
@@ -36,6 +36,7 @@ else
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
 	<div class="container">
 		<input type="checkbox" id="flip">
@@ -53,7 +54,7 @@ else
 						<div class="title">Replace any data of ID </div>
 						<div class="title">@acc.Id</div>
 						<div>@content</div>
-						
+
 						<form action="#">
 							<div class="input-boxes">
 								<EditForm Model="@acc" OnValidSubmit="@HandleValidSubmit">
@@ -77,7 +78,8 @@ else
 									</div>
 									<div class="input-box">
 										<i class="fas fa-money-check"></i>
-										<input type="number" step="0.0000000000001" placeholder="Replace this wallet" @bind="@acc.Wallet" required>
+										<input type="number" step="0.0000000000001" placeholder="Replace this wallet"
+										@bind="@acc.Wallet" required>
 									</div>
 									<div class="button input-box">
 										<input type="submit" value="Confirm">
@@ -93,21 +95,21 @@ else
 	</div>
 </body>
 
-@code{
-[Parameter]
-        public string Id { get; set; }
-        private AccountManagementModel acc;
-        private string content;
-        protected override async Task OnInitializedAsync()
-        {
-            acc = await _httpClient.GetFromJsonAsync<AccountManagementModel>($"Admin/EditAccount/{Id}");
-        }
+@code {
+	[Parameter]
+	public string Id { get; set; }
+	private AccountManagementModel acc;
+	private string content;
+	protected override async Task OnInitializedAsync()
+	{
+		acc = await _httpClient.GetFromJsonAsync<AccountManagementModel>($"Admin/EditAccount/{Id}");
+	}
 
-        private async Task HandleValidSubmit()
-        {
-            AccountManagementModel accNew = acc;
-            accNew.DateOfBirth = accNew.DateOfBirth.ToUniversalTime().AddDays(1);
-            HttpResponseMessage response = await _httpClient.PostAsJsonAsync<AccountManagementModel>("Admin/EditAccount", accNew);
-            content = await response.Content.ReadAsStringAsync();
-        }
+	private async Task HandleValidSubmit()
+	{
+		AccountManagementModel accNew = acc;
+		accNew.DateOfBirth = accNew.DateOfBirth.ToUniversalTime().AddDays(1);
+		HttpResponseMessage response = await _httpClient.PostAsJsonAsync<AccountManagementModel>("Admin/EditAccount", accNew);
+		content = await response.Content.ReadAsStringAsync();
+	}
 }
