--- a/BlazorApp3/MauiApp2/Pages/Profile.razor
+++ b/BlazorApp3/MauiApp2/Pages/Profile.razor
@@ -6,6 +6,7 @@
 @inject IAccountService _accountService;
 
 @*----------------------------------------------------------------------------------------------------*@
+
 <head>
 	<meta charset="utf-8">
 	<title>account setting or edit profile - Bootdey.com</title>
@@ -14,8 +15,9 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
 	@*<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>*@
 </head>
+
 <body>
-    <div class="container">
+	<div class="container">
 		<div class="row gutters">
 			<div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12">
 				<div class="card h-100">
@@ -23,7 +25,8 @@
 						<div class="account-settings">
 							<div class="user-profile">
 								<div class="user-avatar">
-									<img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Maxwell Admin"  style="border-radius:75%">
+									<img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Maxwell Admin"
+										style="border-radius:75%">
 								</div>
 								<h5 class="user-name">@accountManagementModel.Name</h5>
 								<h6 class="user-email">@accountManagementModel.Email</h6>
@@ -33,7 +36,7 @@
 								<p style="font-weight: 300">@accountManagementModel.Id</p>
 								<p>@accountManagementModel.Wallet</p>
 								<p id="hideMe">@content</p>
-							</div>	
+							</div>
 						</div>
 					</div>
 				</div>
@@ -42,96 +45,105 @@
 				<div class="card h-100">
 					<div class="card-body">
 						<EditForm Model="@accountManagementModel" OnValidSubmit="HandleValidSubmit">
-								<DataAnnotationsValidator />
-								<ValidationSummary />
-						<div class="row gutters">							
-							<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-								<h6 class="mb-2 text-primary">Personal Details</h6>
-							</div>
-							<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
-								<div class="form-group">
-									<label>Full Name</label>
-									<input type="text" class="form-control" placeholder="@accountManagementModel.Name" 
-										@bind="@accountManagementModel.Name">
+							<DataAnnotationsValidator />
+							<ValidationSummary />
+							<div class="row gutters">
+								<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+									<h6 class="mb-2 text-primary">Personal Details</h6>
 								</div>
-							</div>
-							<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
-								<div class="form-group">
-									<label>Email</label>
-									<input type="email" class="form-control" placeholder="@accountManagementModel.Email" 
-										@bind="@accountManagementModel.Email">
+								<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+									<div class="form-group">
+										<label>Full Name</label>
+										<input type="text" class="form-control"
+											placeholder="@accountManagementModel.Name"
+											@bind="@accountManagementModel.Name">
+									</div>
 								</div>
-							</div>
-							<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
-								<div class="form-group">
-									<label for="phone">Date of Birth</label>
-									<input type="date" class="form-control" placeholder="@accountManagementModel.DateOfBirth" 
-										@bind="@accountManagementModel.DateOfBirth">
+								<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+									<div class="form-group">
+										<label>Email</label>
+										<input type="email" class="form-control"
+											placeholder="@accountManagementModel.Email"
+											@bind="@accountManagementModel.Email">
+									</div>
 								</div>
-							</div>
-							<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
-								<div class="form-group">
-									<label><span style="color:red">Wallet</span></label>
-									<input type="text" class="form-control" placeholder="@accountManagementModel.Wallet" style="pointer-events:none" 
-										@bind="@accountManagementModel.Wallet">
+								<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+									<div class="form-group">
+										<label for="phone">Date of Birth</label>
+										<input type="date" class="form-control"
+											placeholder="@accountManagementModel.DateOfBirth"
+											@bind="@accountManagementModel.DateOfBirth">
+									</div>
 								</div>
-							</div>
-							<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
-								<div class="form-group">
-									<label><span style="color:red">Role</span></label>
-									<input type="text" class="form-control" placeholder="@accountManagementModel.Role" style="pointer-events:none" 
-										@bind="@accountManagementModel.Role">
+								<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+									<div class="form-group">
+										<label><span style="color:red">Wallet</span></label>
+										<input type="text" class="form-control"
+											placeholder="@accountManagementModel.Wallet" style="pointer-events:none"
+											@bind="@accountManagementModel.Wallet">
+									</div>
 								</div>
-							</div>
-							<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
-								<div class="form-group">
-									<label><span style="color:red">ID</span></label>
-									<input type="text" class="form-control" placeholder="@accountManagementModel.Id" style="pointer-events:none" 
-										@bind="@accountManagementModel.Id">
+								<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+									<div class="form-group">
+										<label><span style="color:red">Role</span></label>
+										<input type="text" class="form-control"
+											placeholder="@accountManagementModel.Role" style="pointer-events:none"
+											@bind="@accountManagementModel.Role">
+									</div>
 								</div>
-							</div>
-							<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-								<div class="text-left">NOTE: You can't edit field has <span style="color:red">RED</span> color.</div>
-								<div class="text-right">
-									<button type="submit" class="btn btn-primary"  style="width:83px">Confirm</button>
+								<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+									<div class="form-group">
+										<label><span style="color:red">ID</span></label>
+										<input type="text" class="form-control" placeholder="@accountManagementModel.Id"
+											style="pointer-events:none" @bind="@accountManagementModel.Id">
+									</div>
 								</div>
+								<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+									<div class="text-left">NOTE: You can't edit field has <span
+											style="color:red">RED</span> color.</div>
+									<div class="text-right">
+										<button type="submit" class="btn btn-primary"
+											style="width:83px">Confirm</button>
+									</div>
+								</div>
+
 							</div>
-							
-						</div>
 						</EditForm>
 						<EditForm Model="@changeEmail" OnValidSubmit="ChangeEmail">
 							<DataAnnotationsValidator />
 							<ValidationSummary />
-						<div class="row gutters">
-							<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-								<h6 class="mt-3 mb-2 text-primary">New Email</h6>
-							</div>
-							<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
-								<div class="form-group">
-									<label for="Street">New Email</label>
-									<input type="text" class="form-control" placeholder="Enter new email address" 
-										@bind="@changeEmail.Email" >
+							<div class="row gutters">
+								<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+									<h6 class="mt-3 mb-2 text-primary">New Email</h6>
+								</div>
+								<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+									<div class="form-group">
+										<label for="Street">New Email</label>
+										<input type="text" class="form-control" placeholder="Enter new email address"
+											@bind="@changeEmail.Email">
+									</div>
+								</div>
+								<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+									<div class="form-group">
+										<label for="ciTy">Password</label>
+										<input type="password" class="form-control" placeholder="Enter new password"
+											@bind="@changeEmail.Password">
+									</div>
+								</div>
+								<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+									<div class="text-right">
+										<button type="submit" class="btn btn-primary"
+											style="width:83px">Confirm</button>
+									</div>
 								</div>
 							</div>
-							<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
-								<div class="form-group">
-									<label for="ciTy">Password</label>
-									<input type="password" class="form-control" placeholder="Enter new password" 
-										@bind="@changeEmail.Password">
-								</div>
-							</div>
-							<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-								<div class="text-right">
-									<button type="submit" class="btn btn-primary"  style="width:83px">Confirm</button>
-								</div>
-							</div>
-						</div>
 						</EditForm>
 						<div class="row gutters" style="padding-top: 10px">
 							<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
 								<div class="text-right">
 									<label>Fogot Password? </label>
-									<button type="submit" class="btn btn-danger" style="width:83px" @onclick="ChangePass">Reset</button>
+									<button type="submit" class="btn btn-danger" style="width:83px"
+										@onclick="ChangePass">Reset</button>
 								</div>
 							</div>
 						</div>
@@ -148,27 +160,29 @@
 @*----------------------------------------------------------------------------------------------------*@
 
 @code {
-    ChangeEmailModel changeEmail = new ChangeEmailModel();
-    public async Task ChangeEmail()
-    {
-        content = await (await _httpClient.PostAsJsonAsync<ChangeEmailModel>("User/ChangeEmail", changeEmail)).Content.ReadAsStringAsync();
-        _accountService.Login();
-        _navigationManager.NavigateTo("/Profile");
-    }
-    public async Task ChangePass()
-    {
-        _navigationManager.NavigateTo("/ResetPassword");
-    }
-    private AccountManagementModel accountManagementModel = new AccountManagementModel();
-    private string content;
-    protected override async Task OnInitializedAsync()
-    {
-        accountManagementModel = await _httpClient.GetFromJsonAsync<AccountManagementModel>("user/Profile");
-    }
+	ChangeEmailModel changeEmail = new ChangeEmailModel();
+	public async Task ChangeEmail()
+	{
+		content = await (await _httpClient.PostAsJsonAsync<ChangeEmailModel>("User/ChangeEmail",
+		changeEmail)).Content.ReadAsStringAsync();
+		_accountService.Login();
+		_navigationManager.NavigateTo("/Profile");
+	}
+	public async Task ChangePass()
+	{
+		_navigationManager.NavigateTo("/ResetPassword");
+	}
+	private AccountManagementModel accountManagementModel = new AccountManagementModel();
+	private string content;
+	protected override async Task OnInitializedAsync()
+	{
+		accountManagementModel = await _httpClient.GetFromJsonAsync<AccountManagementModel>("user/Profile");
+	}
 
-    private async Task HandleValidSubmit()
-    {
-        HttpResponseMessage response = await _httpClient.PostAsJsonAsync<AccountManagementModel>("user/EditProfile", accountManagementModel);
-        content = await response.Content.ReadAsStringAsync();
-    }
+	private async Task HandleValidSubmit()
+	{
+		HttpResponseMessage response = await _httpClient.PostAsJsonAsync<AccountManagementModel>("user/EditProfile",
+		accountManagementModel);
+		content = await response.Content.ReadAsStringAsync();
+	}
 }
