--- a/BlazorApp3/MauiApp2/Pages/SignUp.razor
+++ b/BlazorApp3/MauiApp2/Pages/SignUp.razor
@@ -1,5 +1,4 @@
-﻿
-@page "/signup"
+﻿@page "/signup"
 
 <head>
 	<meta charset="UTF-8">
@@ -7,19 +6,23 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
 	<div class="container">
 		<input type="checkbox" id="flip">
 		<div class="cover">
 			<div class="front">
-				<img src="https://images.unsplash.com/photo-1432821596592-e2c18b78144f?ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8MXx8fGVufDB8fHx8&ixlib=rb-1.2.1&w=1000&q=80" alt="">
+				<img src="https://images.unsplash.com/photo-1432821596592-e2c18b78144f?ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8MXx8fGVufDB8fHx8&ixlib=rb-1.2.1&w=1000&q=80"
+					alt="">
 				<div class="text">
 					<span class="text-1">Every new friend is a <br> new adventure</span>
 					<span class="text-2">Let's get connected</span>
 				</div>
 			</div>
 			<div class="back">
-				<img class="backImg" src="https://images.unsplash.com/photo-1432821596592-e2c18b78144f?ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8MXx8fGVufDB8fHx8&ixlib=rb-1.2.1&w=1000&q=80" alt="">
+				<img class="backImg"
+					src="https://images.unsplash.com/photo-1432821596592-e2c18b78144f?ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8MXx8fGVufDB8fHx8&ixlib=rb-1.2.1&w=1000&q=80"
+					alt="">
 				<div class="text">
 					<span class="text-1">Complete miles of journey <br> with one step</span>
 					<span class="text-2">Let's get started</span>
@@ -33,8 +36,8 @@
 					<form action="#">
 						<div class="input-boxes">
 							<EditForm Model="@signUpModel" OnValidSubmit="HandleValidSubmit">
-								<DataAnnotationsValidator/>
-								<ValidationSummary/>
+								<DataAnnotationsValidator />
+								<ValidationSummary />
 								<div class="input-box">
 									<i class="fas fa-user"></i>
 									<input type="text" @bind="@signUpModel.Name" placeholder="Enter your name" required>
@@ -42,19 +45,23 @@
 								<div class="input-box">
 									<i class="fas fa-envelope"></i>
 									@*<input type="text" placeholder="Enter your email" required>*@
-									<input type="text" @bind="@signUpModel.Email" placeholder="Enter your email" required />
+									<input type="text" @bind="@signUpModel.Email" placeholder="Enter your email"
+										required />
 								</div>
 								<div class="input-box">
 									<i class="far fa-calendar-alt"></i>
-									<input type="date" @bind="@signUpModel.DateOfBirth" placeholder="Date of Birth" required>
+									<input type="date" @bind="@signUpModel.DateOfBirth" placeholder="Date of Birth"
+										required>
 								</div>
 								<div class="input-box">
 									<i class="fas fa-lock"></i>
-									<input type="password" @bind="@signUpModel.Password" placeholder="Enter your password" required>
+									<input type="password" @bind="@signUpModel.Password"
+										placeholder="Enter your password" required>
 								</div>
 								<div class="input-box">
 									<i class="fa fa-check-circle"></i>
-									<input type="password" @bind="@signUpModel.ConfirmPassword" placeholder="Confirm your password" required>
+									<input type="password" @bind="@signUpModel.ConfirmPassword"
+										placeholder="Confirm your password" required>
 								</div>
 								<div class="input-box">
 									<a style="margin-right: 5px; margin-left:12% ; color: #7d2ae8;">Customer</a>
@@ -67,11 +74,12 @@
 										</label>
 									</a>
 									<a style="margin-left: 5px; color: #2196F3">Studio</a>
-								</div>								
+								</div>
 								<div class="button input-box">
 									<input type="submit" value="Signup">
 								</div>
-								<div class="text sign-up-text">Already have an account? <a href="/login"><label>Login now</label></a></div>
+								<div class="text sign-up-text">Already have an account? <a href="/login"><label>Login
+											now</label></a></div>
 							</EditForm>
 						</div>
 					</form>
@@ -84,33 +92,33 @@
 
 <div>@content</div>
 
-@code{
+@code {
 	private string role = "Customer";
-        private void Role()
-        {
-            if (role == "Customer")
-            {
-                role = "Studio";
-            }
-            else
-            {
-                role = "Customer";
-            }
-        }
-        private readonly SignUpModel signUpModel = new()
-        { DateOfBirth = DateTime.Now };
-        private string content;
-        protected async Task HandleValidSubmit()
-        {
-            signUpModel.Role = role;
-            HttpResponseMessage response = await _httpClient.PostAsJsonAsync<SignUpModel>("user/signUp", signUpModel);
-            if (response.IsSuccessStatusCode)
-            {
-                _navigationManager.NavigateTo("/", true);
-            }
-            else
-            {
-                content = await response.Content.ReadAsStringAsync();
-            }
-        }
+	private void Role()
+	{
+		if (role == "Customer")
+		{
+			role = "Studio";
+		}
+		else
+		{
+			role = "Customer";
+		}
+	}
+	private readonly SignUpModel signUpModel = new()
+	{ DateOfBirth = DateTime.Now };
+	private string content;
+	protected async Task HandleValidSubmit()
+	{
+		signUpModel.Role = role;
+		HttpResponseMessage response = await _httpClient.PostAsJsonAsync<SignUpModel>("user/signUp", signUpModel);
+		if (response.IsSuccessStatusCode)
+		{
+			_navigationManager.NavigateTo("/", true);
+		}
+		else
+		{
+			content = await response.Content.ReadAsStringAsync();
+		}
+	}
 }
